* `request` now uses `curlPerform` instead `getURL` to gain finer control over API requests.
* `request` now attempts to `tryCatch` any errors on writing the MTurkR log file. (#9)
* `request` now returns an object of S3 class "MTurkResponse" and an associated print method has been added.

## BUG FIXES ##
* Corrected the API operation name in `SendTestEventNotification`.
* Fixed a bug in `GetBonuses` using a HITTypeId that caused the function to fail catastrophically.

## DOCUMENTATION ##
* Work on the MTurkR wiki (https://github.com/leeper/MTurkR/wiki) has begun, with contributions from Kyle Hamilton.
* The `add.seconds` parameter was incorrectly called `add.time` in the `ExtendHIT` documentation.

# CHANGES TO MTurkR 0.4 #

## SIGNIFICANT USER-VISIBLE CHANGES ##
* Functions that accept a `hit.type` argument can now generally accept a vector of HITTypeIds rather than just a single character string. See documentation.
* `GetBonuses` now allows requests to be opened in the default browser, like most other API functions.
* From version 0.3.7, global options (`MTurkR.log`,`MTurkR.test`,`MTurkR.browser`,and `MTurkR.print`) have been added to all functions. Defaults for these remain the same in all places.
* From version 0.3.65, `SearchHITs` returns a named list of QualificationRequirements. This is a consequence of some significant changes to now the names of user-defined QualificationTypes are added to this list (moving that functionality from `QualificationRequirementsToDataFrame` to `SearchHITs`.
* From version 0.3.6, a global option `options('MTurkR.sandbox'=FALSE)` has been added to allow easier reuse of code between testing in the sandbox and the live server. The default behavior remains to use the live server, but using an option, which is called by all functions, allows one to toggle the global option and then recycle code verbatim.