@@ -19,8 +19,9 @@ function (assignment = NULL, hit = NULL, hit.type = NULL, return.all = TRUE,
     else if(!is.null(hit) & !is.null(hit.type) & !is.null(assignment)) 
         stop("Specify HITId xor AssignmentId xor HITType")
     if(return.all == TRUE) {
-        pagenumber <- "1"
-        pagesize <- "100"
+        #pagenumber <- "1"
+        #pagesize <- "100"
+        # `return.all` needs to handle batches
     }
     if(as.numeric(pagesize) < 1 || as.numeric(pagesize) > 100) 
         stop("'pagesize' must be in range (1,100)")
@@ -32,21 +33,20 @@ function (assignment = NULL, hit = NULL, hit.type = NULL, return.all = TRUE,
                 hit <- as.character(hit)
             GETparameters <- paste("&HITId=", hit, "&PageNumber=", 
                 pagenumber, "&PageSize=", pagesize, sep = "")
-        }
-        else{
-			if(is.factor(assignment))
+        } else{
+            if(is.factor(assignment))
                 assignment <- as.character(assignment)
-            GETparameters <- paste(	"&AssignmentId=", assignment, 
-									"&PageNumber=", pagenumber,
-									"&PageSize=", pagesize, sep = "")
+            GETparameters <- paste( "&AssignmentId=", assignment, 
+                                    "&PageNumber=", pagenumber,
+                                    "&PageSize=", pagesize, sep = "")
         }
         auth <- authenticate(operation, secret)
         request <- request(keyid, auth$operation, auth$signature, 
             auth$timestamp, GETparameters, browser=browser,
             log.requests = log.requests, sandbox = sandbox,
             validation.test = validation.test)
-		if(validation.test)
-			return(invisible(request))
+        if(validation.test)
+            return(invisible(request))
         if(browser == TRUE)
             return(invisible(NULL))
         request$operation <- operation
@@ -61,14 +61,12 @@ function (assignment = NULL, hit = NULL, hit.type = NULL, return.all = TRUE,
                     Bonuses$HITId <- hit
                 return(Bonuses)
             }
-        }
-        else if(request$valid == FALSE)
+        } else if(request$valid == FALSE)
             warning("Invalid Request")
-    }
-    else if(!is.null(hit.type)) {
+    } else if(!is.null(hit.type)) {
         hitsearch <- SearchHITs(keypair = keypair, print = FALSE, 
-								log.requests = log.requests, sandbox = sandbox,
-								return.qual.dataframe = FALSE)
+                                log.requests = log.requests, sandbox = sandbox,
+                                return.qual.dataframe = FALSE)
         hitlist <- hitsearch$HITs$HITId[hitsearch$HITs$HITTypeId %in% hit.type]
         if(length(hitlist) == 0) 
             stop("No HITs found for HITType")
@@ -76,15 +74,15 @@ function (assignment = NULL, hit = NULL, hit.type = NULL, return.all = TRUE,
                 c("HITId", "Number", "Amount"))
         z$HITId <- hitlist
         for(i in 1:length(hitlist)) {
-            GETparameters <- paste(	"&HITId=", hitlist[i],
-									"&PageNumber=", pagenumber,
-									"&PageSize=", pagesize, sep = "")
+            GETparameters <- paste( "&HITId=", hitlist[i],
+                                    "&PageNumber=", pagenumber,
+                                    "&PageSize=", pagesize, sep = "")
             auth <- authenticate(operation, secret)
             request <- request(keyid, auth$operation, auth$signature, 
                 auth$timestamp, GETparameters, log.requests = log.requests, 
                 sandbox = sandbox, validation.test = validation.test)
-			if(validation.test)
-				invisible(request)
+            if(validation.test)
+                invisible(request)
             if(request$valid == TRUE) {
                 request$bonuses <- BonusPaymentsToDataFrame(xml = request$xml)
                 if(!is.null(request$bonuses)) {
@@ -95,8 +93,7 @@ function (assignment = NULL, hit = NULL, hit.type = NULL, return.all = TRUE,
                     z$Number[i] <- 0
                     z$Amount[i] <- 0
                 }
-            }
-            else {
+            } else {
                 if(print == TRUE) 
                     warning("Invalid Request for HIT ", hitlist[i])
             }
